@@ -12,6 +12,10 @@ to this release.
 
 {{{ Bug fixes
 
+- Fixed a class loading issue when no GUI (SplashScreen or TrayIcon) was shown
+  on startup. The effects were visible if the VoxSpell plugin was installed
+  and the Markdown plugin was tried to be used. (Björn "Vampire" Kautler)
+
 - When changing the Look and Feel on-the-fly, already shown JTrees with
   explicitly set TreeCellRenderers were rendered wrongly, now they are robust
   in regards to Look and Feel changes. (Björn "Vampire" Kautler)
